render: fix ChangePicture when Xinerama is active (v2) (X.org bug #49170)

commit 802932d112a3f6a09420be9e4a13fa78ac43840b
 Author: Adam Jackson <ajax@redhat.com>
 Date:   Mon Nov 17 15:28:58 2014 -0500

    render: fix ChangePicture when Xinerama is active (v2) (#49170)

    ChangePicture takes wire XIDs, but didn't do any Xinerama translation,
    which meant setting a clip pixmap or a separate alpha picture would
    result in those elements pointing at the instance of the pixmap on
    screen 0.  Which is, you know, bad.

    v2: This one actually builds.

    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=49170
    Signed-off-by: Adam Jackson <ajax@redhat.com>
    Reviewed-by: Keith Packard <keithp@keithp.com>
    Signed-off-by: Keith Packard <keithp@keithp.com>

 Backported-to-NX-by: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>